(process) disable or remove clone-exec feature (6850720)

XMLWordPrintable

    • b62
    • generic
    • generic

      jtreg and other tools are failing on linux-i586 since the changes for 6850720 were pushed. Here's an example error log:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (os_linux_x86.cpp:683), pid=4660, tid=2003827600
      # Error: pthread_getattr_np failed with errno = 3
      #
      # JRE version: 7.0
      # Java VM: Java HotSpot(TM) Server VM (16.0-b04 mixed mode linux-x86 )
      # An error report file with more information is saved as:
      # /tmp/jprt/P1/T/202821.ksrini/source/test/hs_err_pid4660.log
      #
      # If you would like to submit a bug report, please visit:
      # http://java.sun.com/webapps/bugreport/crash.jsp
      #

      [error occurred during error reporting , id 0xb]

      make: *** [jtreg_tests] Error 127

            Assignee:
            Michael McMahon
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: