6853336: (process) disable or remove clone-exec feature (6850720)

Clone-exec feature (6850720) needs more work on 32-bit Linux

Reviewed-by: alanb, michaelm